gcloud/gcloud-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java2days-ratings-backend
  namespace: java2days
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java2days-ratings-backend
  template:
    metadata:
      labels:
        app: java2days-ratings-backend
      annotations:
        balev.eu/author: "Lachezar Balev, Georgi Peychev"
    spec:
      containers:
        - name: java2days-ratings-backend
          image: luchob/ratings-service:v1
          ports:
            - containerPort: 8080
              name: server-port
          livenessProbe:
            httpGet:
              path: /admin/healthcheck
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 30
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /admin/healthcheck
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 30
            timeoutSeconds: 3
